# azul-plugin-index-coincidence

./: Dockerfile  README.md  pipeline-mirror.yaml  pyproject.toml  setup.py  tox.ini
azul_plugin_index_coincidence/: main.py
azul_plugin_index_coincidence/entropy/: __init__.py  entropy.c
azul_plugin_index_coincidence/index_coincidence/: main.py
tests/: test_index_coincidence.py
tests/entropy/: test_entropies.py  test_entropy.py  test_files.py
tests/index_coincidence/: test_data.json  test_index_coincidence.py
tests/index_coincidence/helpers/: dump.py  encode.py  print.py
